# test_static_sd_partitioning

./: CMakeLists.txt  README.md  StaticSdPartitioningTests.camkes  prepare_test.sh  system_config.h
components/ConfigServer/: ConfigServer.camkes
components/ConfigServer/src/: ConfigServer.c
components/LogServer/: LogServer.camkes
components/LogServer/src/: LogServer.c
components/TestApp/: TestApp.camkes
components/TestApp/src/: TestRunnerApp1.c  TestRunnerApp2.c
components/common/: common.c
tests/: TestMacros.h  test_OS_FileSystem.c  test_OS_FileSystem.h  test_OS_FileSystemFile.c  test_OS_FileSystemFile.h  test_create_handle.c  test_create_handle.h  test_parameter_get_functions.c  test_parameter_get_functions.h  test_parameter_set_functions.c  test_parameter_set_functions.h
util/: create_fs_backend.c  create_fs_backend.h  create_parameters.c  create_parameters.h  helper_func.c  helper_func.h  init_lib_with_fs_backend.c  init_lib_with_fs_backend.h
